将command的公共逻辑进行抽取