@@ -1,44 +1,39 @@
 package com.weixiao.command;
 
-import com.weixiao.Jit;
-import com.weixiao.repo.Repository;
 import com.weixiao.model.StatusResult;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import picocli.CommandLine.*;
 
 import java.io.IOException;
-import java.nio.file.Path;
-import java.util.*;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * jit status - 显示工作区状态，当前支持列出未跟踪文件（untracked files）。
  */
 @Command(name = "status", mixinStandardHelpOptions = true, description = "显示工作区状态（含未跟踪文件）")
-public class StatusCommand implements Runnable, IExitCodeGenerator {
+public class StatusCommand extends BaseCommand {
 
     private static final Logger log = LoggerFactory.getLogger(StatusCommand.class);
-
-    @ParentCommand
-    private Jit jit;
 
     @Option(names = {"--porcelain"}, description = "以机器可读格式输出（每行一个文件，格式：?? <path> 或  M <path>）")
     private boolean porcelain;
 
-    private int exitCode = 0;
+    @Override
+    protected void initParams() {
+        params = new LinkedHashMap<>();
+        if (porcelain) {
+            params.put("porcelain", "");
+        }
+    }
 
     @Override
-    public void run() {
-        exitCode = 0;
-        Path start = jit.getStartPath();
-        log.debug("status start path={}", start);
-
-        Repository repo = Repository.find(start);
-        if (repo == null) {
-            exitCode = 1;
-            return;
-        }
-
+    protected void doRun() {
+        log.debug("status start path={}", getStartPath());
         try {
             repo.getIndex().load();
             StatusResult result = repo.getStatus();
@@ -49,7 +44,7 @@ public class StatusCommand implements Runnable, IExitCodeGenerator {
             Set<String> indexDeleted = result.getIndexDeleted();
             Set<String> indexModified = result.getIndexModified();
 
-            if (porcelain) {
+            if (isSet("porcelain")) {
                 // 机器可读格式与 Git 一致：第一列为 index vs HEAD，第二列为 workspace vs index，无则用空格；untracked 为 "??"
                 Set<String> indexPaths = new HashSet<>();
                 indexPaths.addAll(indexAdded);
@@ -57,14 +52,14 @@ public class StatusCommand implements Runnable, IExitCodeGenerator {
                 indexPaths.addAll(indexDeleted);
                 indexPaths.addAll(workspaceModified);
                 indexPaths.addAll(workspaceDeleted);
-                List<String> sortedIndexPaths = indexPaths.stream().sorted().toList();
+                List<String> sortedIndexPaths = indexPaths.stream().sorted().collect(Collectors.toList());
                 for (String p : sortedIndexPaths) {
                     String line = formatPorcelainLine(p, indexAdded, indexModified, indexDeleted, workspaceModified, workspaceDeleted);
                     if (line != null) {
                         System.out.println(line);
                     }
                 }
-                for (String p : workspaceUntracked.stream().sorted().toList()) {
+                for (String p : workspaceUntracked.stream().sorted().collect(Collectors.toList())) {
                     System.out.println("?? " + p);
                 }
             } else {
@@ -73,13 +68,13 @@ public class StatusCommand implements Runnable, IExitCodeGenerator {
                 // Changes to be committed (index vs HEAD)
                 if (!indexAdded.isEmpty() || !indexModified.isEmpty() || !indexDeleted.isEmpty()) {
                     System.out.println("Changes to be committed:");
-                    for (String p : indexAdded.stream().sorted().toList()) {
+                    for (String p : indexAdded.stream().sorted().collect(Collectors.toList())) {
                         System.out.println("  new file:   " + p);
                     }
-                    for (String p : indexModified.stream().sorted().toList()) {
+                    for (String p : indexModified.stream().sorted().collect(Collectors.toList())) {
                         System.out.println("  modified:   " + p);
                     }
-                    for (String p : indexDeleted.stream().sorted().toList()) {
+                    for (String p : indexDeleted.stream().sorted().collect(Collectors.toList())) {
                         System.out.println("  deleted:    " + p);
                     }
                     hasChanges = true;
@@ -87,10 +82,10 @@ public class StatusCommand implements Runnable, IExitCodeGenerator {
                 // Changes not staged for commit (workspace vs index)
                 if (!workspaceModified.isEmpty() || !workspaceDeleted.isEmpty()) {
                     System.out.println("Changes not staged for commit:");
-                    for (String p : workspaceModified.stream().sorted().toList()) {
+                    for (String p : workspaceModified.stream().sorted().collect(Collectors.toList())) {
                         System.out.println("  modified:   " + p);
                     }
-                    for (String p : workspaceDeleted.stream().sorted().toList()) {
+                    for (String p : workspaceDeleted.stream().sorted().collect(Collectors.toList())) {
                         System.out.println("  deleted:    " + p);
                     }
                     hasChanges = true;
@@ -98,7 +93,7 @@ public class StatusCommand implements Runnable, IExitCodeGenerator {
                 // Untracked files
                 if (!workspaceUntracked.isEmpty()) {
                     System.out.println("Untracked files:");
-                    for (String p : workspaceUntracked.stream().sorted().toList()) {
+                    for (String p : workspaceUntracked.stream().sorted().collect(Collectors.toList())) {
                         System.out.println("  " + p);
                     }
                     hasChanges = true;
@@ -133,10 +128,5 @@ public class StatusCommand implements Runnable, IExitCodeGenerator {
 
         if (col1 == ' ' && col2 == ' ') return null;
         return "" + col1 + col2 + " " + path;
-    }
-
-    @Override
-    public int getExitCode() {
-        return exitCode;
     }
 }
